fix chip misalignement

--- a/modules/_chips.scss
+++ b/modules/_chips.scss
@@ -8,7 +8,6 @@
     padding: 0 15px;
     cursor: pointer;
     i{
-        margin-left: 10px;
         margin-right: 3px;
         font-size: 14px;
     }
